deploy/adminweb/adminweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityplatformadminwebtest-deployment
  labels:
    app: identityplatformadminwebtest
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: identityplatformadminwebtest
  template:
    metadata:
      labels:
        app: identityplatformadminwebtest
        service: identityplatformadminwebtest
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "identityplatformadminwebtest"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: identityplatformadminwebtest
          image: rustemturk/identityserver4-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
              requests:
                memory: 500Mi
                cpu: 100m
