deploy/adminweb/adminweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityplatformadminwebtest-svc
  labels:
    app: identityplatformadminwebtest
    service: identityplatformadminwebtest
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    service: identityplatformadminwebtest
