deploy/adminweb/adminweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identityplatformadminwebtest-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  rules:
  - host: admin.skoruba.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identityplatformadminwebtest-svc
            port:
              number: 80
